[metadata]
name = contig_classifier
version = 0.0.1
author = Lotte Pronk
author_email = lotte.pronk@wur.nl
description = A fast and easy tool to predict if a metagenomic contig is eukaryotic or prokaryotic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/
project_urls = Bug Tracker = https://github.com/project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: tba :: tba
    Operating System :: Linux or MacOS

[options]
#  package_dir =
#      = ''
packages = find:
python_requires = >=3.8

[options.packages.find]
#  where = whokaryote