[metadata]
name = contig_classifier
version = 1.1.0
author = Lotte Pronk
author_email = lotte.pronk@wur.nl
description = A fast and easy tool to predict if a metagenomic contig is eukaryotic or prokaryotic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/
project_urls = Bug Tracker = https://github.com/project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: AGPL-3.0
    Operating System :: Linux or MacOS

[options]
#  package_dir =
#      = ''
packages = find:
python_requires = >=3.8

[options.packages.find]
#  where = whokaryote_scripts